--- a/invoice_template.html
+++ b/invoice_template.html
@@ -2,9 +2,81 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Invoice</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
+    <div class="container">
+        <center>
 
+            <div class="header">
+                <h1>Invoice</h1>
+            </div>
+            <div class="invoice_number">
+                <h2>{{response.inv_number}}</h2>
+            </div>
+
+            <div class="order_number">
+                <h2>{{response.purchase_order_no}}</h2>
+            </div>
+
+            <div class="row">
+                <div class="delivery_person" >
+                    <span>
+                        <h2>Delivery Person: {{response.delivery_person_name}} &nbsp &nbsp Customer: {{response.client}}</h2>
+                    </span>
+                </div>
+
+                <div class="delivery_address_datetime" style="flex-direction: row">
+                    <h2>Delivery Datetime: {{response.order_delivery_datetime}} &nbsp &nbsp &nbsp Delivery Address: {{response.delivery_person_address}}</h2>
+                </div>
+
+
+                <div class="ordered_products">
+                    <table>
+                        <thead>
+                            <th>Product</th>
+                            <th>Quantity</th>
+                            <th>Unit Price</th>
+                            <th>VAT</th>
+                            <th>Amount</th>
+                        </thead>
+
+                        {% for order_prod in response.order_products %}
+                        <tbody>
+                            <tr>
+                                <td>{{order_prod.product_name}}</td>
+                                <td>{{order_prod.purchased_qty}}</td>
+                                <td>{{order_prod.unit_sales_price}}</td>
+                                <td>{{order_prod.vat_amount}}</td>
+                                <td>{{order_prod.amount}}</td>
+
+                            </tr>
+
+
+                        </tbody>
+                        {% endfor %}
+                        <tfoot>
+                            <tr>
+                                <tr>
+                                    <td><h4>Total</h4></td>
+                                    <td>{{response.total_qty}}</td>
+                                    <td></td>
+                                    <td>{{response.total_vat}}</td>
+                                    <td>{{response.total_amount}}</td>
+
+                                </tr>
+                            </tr>
+                        </tfoot>
+                    </table>
+                </div>
+
+
+                <div class="customer" style="text-align: center;">
+
+                </div>
+
+            </div>
+        </center>
 </body>
 </html>
