--- a/invoice_template.html
+++ b/invoice_template.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>Invoice</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <style>
+        @page {
+            size: 60mm 200mm;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -23,12 +28,12 @@
             <div class="row">
                 <div class="delivery_person" >
                     <span>
-                        <h2>Delivery Person: {{response.delivery_person_name}} &nbsp &nbsp Customer: {{response.client}}</h2>
+                        <p>Delivery Person: {{response.delivery_person_name}} &nbsp &nbsp Customer: {{response.client}}</p>
                     </span>
                 </div>
 
                 <div class="delivery_address_datetime" style="flex-direction: row">
-                    <h2>Delivery Datetime: {{response.order_delivery_datetime}} &nbsp &nbsp &nbsp Delivery Address: {{response.delivery_person_address}}</h2>
+                    <p>Delivery Datetime: {{response.order_delivery_datetime}} &nbsp &nbsp &nbsp Delivery Address: {{response.delivery_person_address}}</p>
                 </div>
 
 
