Avg price added of all products via script

--- a/invoice_template.html
+++ b/invoice_template.html
@@ -30,18 +30,27 @@
         .right-align {
             text-align: left;
         }
-        /*
+
+
         td {
+            padding: 0.5rem 0rem 0.1rem 0.1rem;
+        }
+
+        .thead-border {
+            padding-left: 50px;
+            padding-right: 50px;
+        }
+        th {
             border: 0.5px solid black;
             border-collapse: collapse;
             padding: 0.5rem 0rem 0.2rem 0rem;
         }
-        */
+        .delivery_person_logo {
+            border-radius: 50%;
+        }
 
-         th {
-            border: 0.5px solid black;
-            border-collapse: collapse;
-            padding: 0.5rem 0rem 0.2rem 0rem;
+        .header {
+            margin-top: 50px;
         }
     </style>
 </head>
@@ -50,58 +59,66 @@
         <center>
             <div class="row">
 
-                <br><br>
-                <div class="logo">
-                    <img src="index.jpeg" height="40" width="40"/>
-                </div>
-                <div class="header">
-                    <h1>ORDDEL</h1>
-                </div>
+                <header>
 
-                    <div class="top-detail">
-                        <table>
-                            <tbody>
-                                <tr><td>Client: {{response.client}}</td> <td>Invoice No. {{response.inv_number}}</td></tr>
-                                <tr><td>Delivery Address: {{response.delivery_person_address}}</td> <td>PO No. {{response.purchase_order_no}}</td></tr>
-                                <tr><td>Delivery Date & Time: {{response.order_delivery_datetime}}</td> <td>Delivery Person: {{response.delivery_person_name}}</td></tr>
-                            </tbody>
-                        </table>
+                    <div class="header">
+                        <div class="logo">
+                            <img src="index.jpeg" height="40" width="40"/>
+                        </div>
+                        <p>Powered by ORDDEL</p>
                     </div>
-                    <br>
-                    <div class="ordered_products" style="margin-left: 50px; margin-right: 50px;">
-                        <table cellpadding="3">
-                            <thead>
+                </header>
+
+
+                <div class="delivery_person_logo">
+                    <img src={{response.delivery_person_logo}} height="60" width="60"/>
+                </div>
+                <br>
+                <div class="top-detail">
+                    <table>
+                        <tbody>
+                            <tr><td>Client: {{response.client}}</td> <td>Delivery Person: {{response.delivery_person_name}}</td></tr>
+                            <tr><td>Delivery Address: {{response.delivery_person_address}}</td> <td>PO No. {{response.purchase_order_no}}</td></tr>
+                            <tr><td>Delivery Date & Time: {{response.order_delivery_datetime}}</td> <td>Invoice No. {{response.inv_number}}</td></tr>
+                        </tbody>
+                    </table>
+                </div>
+                <br>
+                <div class="ordered_products">
+                    <table cellpadding="1">
+                        <thead>
+                            <div class="thead-border">
                                 <th>Product</th>
                                 <th>Quantity</th>
                                 <th>Unit Price</th>
                                 <th>VAT</th>
                                 <th>Amount</th>
-                            </thead>
+                            </div>
+                        </thead>
 
-                            {% for order_prod in response.order_products %}
-                            <tbody>
-                                <tr>
-                                    <td>{{order_prod.product_name}}</td>
-                                    <td>{{order_prod.purchased_qty}}</td>
-                                    <td>{{order_prod.unit_sales_price}} &euro;</td>
-                                    <td>{{order_prod.vat_amount}} &euro;</td>
-                                    <td>{{order_prod.amount}} &euro;</td>
+                        {% for order_prod in response.order_products %}
+                        <tbody>
+                            <tr>
+                                <td>{{order_prod.product_name}}</td>
+                                <td>{{order_prod.purchased_qty}}</td>
+                                <td>&euro; {{order_prod.unit_sales_price}}</td>
+                                <td>&euro; {{order_prod.vat_amount}}</td>
+                                <td>&euro; {{order_prod.amount}}</td>
+                            </tr>
 
-                                </tr>
 
+                        </tbody>
+                        {% endfor %}
 
-                            </tbody>
-                            {% endfor %}
+                    </table>
+                    <br>
+                    <br>
+                    <div class="total">
+                        <h4>Total Packages: {{response.total_qty}}</h4>
+                        <h4>Total Amount:&euro; {{response.total_amount}}</h4>
 
-                        </table>
-                        <br>
-                        <br>
-                        <div class="total">
-                            <h4>Total Packages: {{response.total_qty}}</h4>
-                            <h4>Total Amount: {{response.total_amount}} &euro;</h4>
-
-                        </div>
                     </div>
+                </div>
 
             </div>
         </center>
