--- a/delivery_note.html
+++ b/delivery_note.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Invoice</title>
+    <title>Delivery Note</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <style>
         @page {
@@ -68,7 +68,7 @@
                         <p>Powered by ORDDEL</p>
 
                         <div class="heading">
-                            <h1>Invoice</h1>
+                            <h1>Delivery Note</h1>
                         </div>
                     </div>
                 </header>
@@ -115,7 +115,7 @@
                                     Delivery Date & Time: {{response.order_delivery_datetime}}
                                 </td>
                                 <td>
-                                    Invoice No. {{response.inv_number}}
+                                    Delivery Note No. {{response.do_number}}
                                 </td>
                             </tr>
                         </tbody>
@@ -127,26 +127,17 @@
                         <thead>
                             <div class="thead-border">
                                 <th>Product</th>
+                                <th>Unit</th>
                                 <th>Quantity</th>
-                                <th>Unit Price</th>
-                                <th>VAT</th>
-                                <th>Amount</th>
                             </div>
                         </thead>
 
                         {% for order_prod in response.order_products %}
                         <tbody>
                             <tr>
-                                <td style="text-align:left">{{order_prod.product_name}}</td>
-                                <td style="text-align:right">{{order_prod.purchased_qty}}</td>
-                                <td style="text-align:right">&pound; {{order_prod.unit_sales_price}}</td>
-                                <td>&pound; {{order_prod.vat_amount}}</td>
-                                {% if order_prod.amount == 0.0 %}
-                                    <td style="text-align:right">&pound; 00</td>
-                                {% else %}
-                                    <td style="text-align:right">&pound; {{order_prod.amount}}</td>
-
-                                {% endif %}
+                                <td>{{order_prod.product_name}}</td>
+                                <td>{{order_prod.product_unit}}</td>
+                                <td>&pound; {{order_prod.purchased_qty}}</td>
 
                             </tr>
 
@@ -159,8 +150,6 @@
                     <br>
                     <div class="total">
                         <h4>Total Packages: {{response.total_qty}}</h4>
-                        <h4>Net total(without VAT): {{response.net_total_without_vat}}</h4>
-                        <h4>Grand Total: &pound; {{response.total_amount}}</h4>
 
                     </div>
                     <div class="delivery_note">
