--- a/invoice_template.html
+++ b/invoice_template.html
@@ -174,10 +174,10 @@
                             </thead>
 
                             <tbody>
-                                <tr><td>Bank Name: </td> <td>{{response.bank_name}}</td></tr>
                                 <tr><td>Account Title: </td> <td>{{response.account_title}}</td></tr>
-                                <tr><td>Credit Card No: </td> <td>{{response.credit_card_no}} </td></tr>
                                 <tr><td>Sort Code: </td> <td>{{response.sort_code}} </td></tr>
+                                <tr><td>Account No: </td> <td>{{response.credit_card_no}} </td></tr>
+                                <tr><td>Bank Name: </td> <td>{{response.bank_name}}</td></tr>
                             </tbody>
                         </table>
                     </div>
